recursion end date

--- a/resume.tex
+++ b/resume.tex
@@ -85,7 +85,7 @@
 
     \resumeSubheading
       {Recursion Pharmaceuticals}{Salt Lake City, UT}
-      {Software Engineer}{Feb 2017 - Present}
+      {Software Engineer}{Feb 2017 - Sep 2019}
       \resumeItemListStart
         \resumeItem{Experiment Design Tools}
           {Extended Go API and developed an accompanying React app for data scientists and biologists to design cell culture plate layouts for experiments to identify disease phenotypes and treatment candidates using microscopy.}
