add pluralsight stub

--- a/resume.tex
+++ b/resume.tex
@@ -83,6 +83,10 @@
 \section{Experience}
   \resumeSubHeadingListStart
 
+  \resumeSubheading
+      {Pluralsight}{Salt Lake City, UT}
+      {Software Engineer}{Oct 2019 - Present}
+
     \resumeSubheading
       {Recursion Pharmaceuticals}{Salt Lake City, UT}
       {Software Engineer}{Feb 2017 - Sep 2019}
