--- a/resume.tex
+++ b/resume.tex
@@ -82,7 +82,16 @@
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
-
+  \resumeSubheading
+      {Polyhedron Online}{Salt Lake City, UT}
+      {Chief Executive Officer}{Oct 2019 - Present}
+      \resumeItemListStart
+        \resumeItem{Virtual Tabletop}
+          {Developed a virtual gaming tabletop for users to play RPGs and miniatures games over a websocket. The VTT can build 3d maps from layers of 2d images using a novel terrain building system, and is rendered using PixiJS in a React app.}
+        \resumeItem{Infrastructure}
+          {Built a microservice application from scratch, using Node.js, MongoDB, and Kubernetes, hosted on Amazon EKS.}
+      \resumeItemListEnd
+  
   \resumeSubheading
       {Pluralsight}{Salt Lake City, UT}
       {Software Engineer}{Oct 2019 - Present}
@@ -136,6 +145,8 @@
 %-----------Projects-----------------
 \section{Hackathons}
   \resumeSubHeadingListStart
+    \resumeSubItem{7DRL Game Jam 2020}
+      {JavaScript Texas Hold'em roguelike game and Wild West town simulator. Created in 7 days, placing 35 out of 170.}
     \resumeSubItem{7DRL Game Jam 2018}
       {JavaScript roguelike game in which you fly a spaceship and struggle against the conservation of momentum. Created in 7 days, placing 24 out of 147.}
     \resumeSubItem{7DRL Game Jam 2017}
