--- a/resume.tex
+++ b/resume.tex
@@ -82,19 +82,26 @@
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
-  \resumeSubheading
+
+    \resumeSubheading
+      {Pluralsight}{Salt Lake City, UT}
+      {Software Engineer}{Oct 2019 - Present}
+      \resumeItemListStart
+        \resumeItem{React App Development}
+          {Added new functionality for video course authors to edit their profile, view payment and viewership analytics data, and browse and apply to opportunities for new courses.}
+        \resumeItem{Node.js Server Development}
+          {Added email communications to give authors feedback when they apply to teach a course and are accepted or rejected. Integrated our team's services within Pluralsight's larger system using RabbitMQ, external APIs, and replicated databases.}
+      \resumeItemListEnd
+      
+    \resumeSubheading
       {Polyhedron Online}{Salt Lake City, UT}
-      {Chief Executive Officer}{Oct 2019 - Present}
+      {Creator \& Software Engineer}{Sept 2019 - Present}
       \resumeItemListStart
         \resumeItem{Virtual Tabletop}
           {Developed a virtual gaming tabletop for users to play RPGs and miniatures games over a websocket. The VTT can build 3d maps from layers of 2d images using a novel terrain building system, and is rendered using PixiJS in a React app.}
         \resumeItem{Infrastructure}
           {Built a microservice application from scratch, using Node.js, MongoDB, and Kubernetes, hosted on Amazon EKS.}
       \resumeItemListEnd
-  
-  \resumeSubheading
-      {Pluralsight}{Salt Lake City, UT}
-      {Software Engineer}{Oct 2019 - Present}
 
     \resumeSubheading
       {Recursion Pharmaceuticals}{Salt Lake City, UT}
@@ -110,7 +117,7 @@
 
     \resumeSubheading
       {UCLA Cardiac Proteomics and Signalling Laboratory}{Los Angeles, CA}
-      {Software Engineer}{Jan 2013 - Jan 2017}
+      {Programmer Analyst}{Jan 2013 - Jan 2017}
       \resumeItemListStart
         \resumeItem{ProTurn}
           {Developed a command line and GUI application in Java to perform protein turnover analysis on heavy water labeled mass spectroscopy data, and display data in graphical and tabular formats. Built with JavaFX and Apache Commons Math. Coauthored four related publications, viewable at \href{https://orcid.org/0000-0002-9930-2169}{orcid.org/0000-0002-9930-2169}}
@@ -146,11 +153,9 @@
 \section{Hackathons}
   \resumeSubHeadingListStart
     \resumeSubItem{7DRL Game Jam 2020}
-      {JavaScript Texas Hold'em roguelike game and Wild West town simulator. Created in 7 days, placing 35 out of 170.}
+      {JavaScript Texas Hold'em roguelike game and Wild West town simulator. Created in 7 days, placing 33 out of 209.}
     \resumeSubItem{7DRL Game Jam 2018}
-      {JavaScript roguelike game in which you fly a spaceship and struggle against the conservation of momentum. Created in 7 days, placing 24 out of 147.}
-    \resumeSubItem{7DRL Game Jam 2017}
-      {JavaScript roleplaying game in which you explore a randomly generated continent, build an army,  and conquer cities. Created in 7 days.}
+      {JavaScript roguelike game in which you fly a spaceship and struggle against the conservation of momentum. Created in 7 days, placing 26 out of 146.}
     \resumeSubItem{2015 Big Data to Knowledge Hackathon}
       {Won \$500 first prize for Android cooperative running app that used GPS to support friends running in sync remotely.}
   \resumeSubHeadingListEnd
