--- a/resume.tex
+++ b/resume.tex
@@ -82,25 +82,35 @@
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
-
+  
     \resumeSubheading
-      {Pluralsight}{Salt Lake City, UT}
-      {Software Engineer}{Oct 2019 - Present}
+      {Google}{Kirkland, WA}
+      {Software Engineer}{Jan 2021 - Present}
       \resumeItemListStart
-        \resumeItem{React App Development}
-          {Added new functionality for video course authors to edit their profile, view payment and viewership analytics data, and browse and apply to opportunities for new courses.}
-        \resumeItem{Node.js Server Development}
-          {Added email communications to give authors feedback when they apply to teach a course and are accepted or rejected. Integrated our team's services within Pluralsight's larger system using RabbitMQ, external APIs, and replicated databases.}
+        \resumeItem{Vertex AI Geoexpansion}
+          {Deployed the Vertex AI Training and Vertex Vizier Hyperparameter Tuning services to 14 new regions around the world. Wrote scripts and playbooks to significantly reduce the time required to deploy both products.}
+        \resumeItem{Google Cloud Game Servers}
+          {Added functionality to Google Cloud Game Servers to automatically install Agones on user-created Kubernetes clusters and perform required version updates over time.}
       \resumeItemListEnd
       
     \resumeSubheading
       {Polyhedron Online}{Salt Lake City, UT}
-      {Creator \& Software Engineer}{Sept 2019 - Present}
+      {Creator \& Software Engineer}{Sept 2019 - Jan 2022}
       \resumeItemListStart
         \resumeItem{Virtual Tabletop}
           {Developed a virtual gaming tabletop for users to play RPGs and miniatures games over a websocket. The VTT can build 3d maps from layers of 2d images using a novel terrain building system, and is rendered using PixiJS in a React app.}
         \resumeItem{Infrastructure}
           {Built a microservice application from scratch, using Node.js, MongoDB, and Kubernetes, hosted on Amazon EKS.}
+      \resumeItemListEnd
+
+    \resumeSubheading
+      {Pluralsight}{Salt Lake City, UT}
+      {Software Engineer}{Oct 2019 - Dec 2020}
+      \resumeItemListStart
+        \resumeItem{React App Development}
+          {Added new functionality for video course authors to edit their profile, view payment and viewership analytics data, and browse and apply to opportunities for new courses.}
+        \resumeItem{Node.js Server Development}
+          {Added email communications to give authors feedback when they apply to teach a course and are accepted or rejected. Integrated our team's services within Pluralsight's larger system using RabbitMQ, external APIs, and replicated databases.}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -146,18 +156,6 @@
     \resumeSubheading
       {University of California, Los Angeles}{Los Angeles, CA}
       {Bachelor of Science in Physics}{2015}
-  \resumeSubHeadingListEnd
-
-
-%-----------Projects-----------------
-\section{Hackathons}
-  \resumeSubHeadingListStart
-    \resumeSubItem{7DRL Game Jam 2020}
-      {JavaScript Texas Hold'em roguelike game and Wild West town simulator. Created in 7 days, placing 33 out of 209.}
-    \resumeSubItem{7DRL Game Jam 2018}
-      {JavaScript roguelike game in which you fly a spaceship and struggle against the conservation of momentum. Created in 7 days, placing 26 out of 146.}
-    \resumeSubItem{2015 Big Data to Knowledge Hackathon}
-      {Won \$500 first prize for Android cooperative running app that used GPS to support friends running in sync remotely.}
   \resumeSubHeadingListEnd
 
 \end{document}
